--- a/app/src/main/res/layout/category_header.xml
+++ b/app/src/main/res/layout/category_header.xml
@@ -18,21 +18,18 @@
         android:focusableInTouchMode="true"
         android:orientation="horizontal">
 
-        <Button
+        <ImageView
             android:id="@+id/category_btn_scan"
-            android:layout_width="70px"
-            android:layout_height="70px"
-            android:layout_marginLeft="14dp"
-            android:background="@drawable/act_home_scan_de"
-            android:button="@null"
-            android:layout_centerVertical="true"
+            android:layout_width="75px"
+            android:layout_height="75px"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="14dp"/>
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="50px"
+            android:src="@drawable/act_home_scan_de"/>
 
         <com.zhy.autolayout.AutoLinearLayout
-            android:layout_width="680px"
-            android:layout_height="80px"
+            android:layout_width="700px"
+            android:layout_height="90px"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:background="@drawable/btn_bg_normal"
@@ -40,23 +37,23 @@
 
             <EditText
                 android:id="@+id/category_et_search"
-                android:layout_width="600px"
-                android:layout_height="80px"
+                android:layout_width="610px"
+                android:layout_height="90px"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
                 android:background="@null"
                 android:focusableInTouchMode="false"
-                android:hint="搜索关键字"
+                android:hint="@string/search_search_hint"
                 android:padding="20px"
                 android:paddingLeft="10px"
                 android:singleLine="true"
                 android:textColor="@color/tv_name"
                 android:textColorHint="@color/tv_hint"
-                android:textSize="36px"/>
+                android:textSize="@dimen/tv_light"/>
 
             <ImageView
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:background="@drawable/btn_bg_gray"
                 android:padding="10px"
                 android:src="@drawable/act_home_search_de"
@@ -66,19 +63,14 @@
         </com.zhy.autolayout.AutoLinearLayout>
 
 
-        <Button
+        <ImageView
             android:id="@+id/category_btn_msg"
-            android:layout_width="79px"
+            android:layout_width="80px"
             android:layout_height="80px"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="40px"
-            android:background="@color/colorTransparency"
-            android:button="@null"
-            android:drawableTop="@drawable/act_home_msg_de"
-            android:text="@string/act_home_top_msg"
-            android:textColor="@color/tv_hint"
-            android:textSize="@dimen/act_top_font"/>
+            android:src="@drawable/act_home_msg_de"/>
 
     </com.zhy.autolayout.AutoRelativeLayout>
 </android.support.v7.widget.Toolbar>
