--- a/app/src/main/res/layout/category_item_frist.xml
+++ b/app/src/main/res/layout/category_item_frist.xml
@@ -25,7 +25,7 @@
             android:layout_centerInParent="true"
             android:textColor="@color/tv_name"
             android:text="热门分类"
-            android:textSize="40px"/>
+            android:textSize="@dimen/tv_Regular"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="5px"
