--- a/app/src/main/res/layout/fragment_good_detail.xml
+++ b/app/src/main/res/layout/fragment_good_detail.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="78sp"
-        android:text="详情"/>
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
+    <include layout="@layout/fragment_good_itemtab"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <ImageView
+            android:id="@+id/good_detail_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="center"/>
+    </ScrollView>
 </LinearLayout>
