--- a/app/src/main/res/layout/activity_brand.xml
+++ b/app/src/main/res/layout/activity_brand.xml
@@ -6,7 +6,7 @@
     android:background="@color/bg_gray"
     android:orientation="vertical">
 
-    <include layout="@layout/brand_header"/>
+    <include layout="@layout/activity_brand_header"/>
 
 
     <android.support.v7.widget.RecyclerView
