--- a/app/src/main/res/layout/activity_search_goodshow.xml
+++ b/app/src/main/res/layout/activity_search_goodshow.xml
@@ -4,7 +4,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <include layout="@layout/goods_show_header"/>
+    <include layout="@layout/activity_search_goodshow_header"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:text="综合排序"
                     android:textColor="@drawable/text_btn_color"
-                    android:textSize="40px"/>
+                    android:textSize="@dimen/tv_Regular"/>
 
                 <ImageView
                     android:id="@+id/ivSort"
@@ -56,7 +56,7 @@
                 android:gravity="center"
                 android:text="销量优先"
                 android:textColor="@drawable/text_btn_color"
-                android:textSize="40px"/>
+                android:textSize="@dimen/tv_Regular"/>
 
 
             <LinearLayout
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:text="筛选"
                     android:textColor="@drawable/text_btn_color"
-                    android:textSize="40px"/>
+                    android:textSize="@dimen/tv_Regular"/>
 
                 <ImageView
                     android:id="@+id/ivScreen"
