--- a/app/src/main/res/layout/activity_search_goodshow_header.xml
+++ b/app/src/main/res/layout/activity_search_goodshow_header.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="30px"
+            android:layout_marginLeft="50px"
             android:src="@drawable/icon_back"/>
 
         <com.zhy.autolayout.AutoLinearLayout
@@ -48,7 +48,7 @@
                 android:singleLine="true"
                 android:textColor="@color/tv_name"
                 android:textColorHint="@color/tv_hint"
-                android:textSize="36px"/>
+                android:textSize="@dimen/tv_Normal"/>
 
             <ImageView
                 android:layout_width="80px"
@@ -67,7 +67,7 @@
             android:layout_height="79px"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="30px"
+            android:layout_marginRight="20px"
             android:scaleType="fitXY"
             android:src="@drawable/act_home_msg_de"/>
 
