--- a/app/src/main/res/layout/category_gridview_item.xml
+++ b/app/src/main/res/layout/category_gridview_item.xml
@@ -24,5 +24,5 @@
         android:layout_margin="20px"
         android:singleLine="true"
         android:textColor="@color/tv_brand"
-        android:textSize="36px"/>
+        android:textSize="@dimen/tv_Normal"/>
 </LinearLayout>
