--- a/app/src/main/res/layout/home_item_goods.xml
+++ b/app/src/main/res/layout/home_item_goods.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5px"
+    android:id="@+id/home_rl_goods"
     android:orientation="vertical">
 
     <com.zhy.autolayout.AutoRelativeLayout
@@ -38,7 +39,7 @@
             android:maxLines="2"
             android:text="零度智控DOBBY跟拍口袋无人机 智能高清便携 礼盒版"
             android:textColor="@color/tv_name"
-            android:textSize="38px"/>
+            android:textSize="@dimen/tv_Normal"/>
 
         <TextView
             android:id="@+id/tv_goods_price"
@@ -48,7 +49,7 @@
             android:layout_marginBottom="20px"
             android:text="$55.3"
             android:textColor="@color/tv_price"
-            android:textSize="36px"/>
+            android:textSize="@dimen/tv_light"/>
 
         <TextView
             android:id="@+id/tv_goods_buynum"
@@ -60,7 +61,7 @@
             android:layout_toRightOf="@+id/tv_goods_price"
             android:text="23334人购买"
             android:textColor="@color/tv_hint"
-            android:textSize="32px"/>
+            android:textSize="@dimen/tv_small"/>
     </com.zhy.autolayout.AutoRelativeLayout>
 
 </com.zhy.autolayout.AutoLinearLayout>
