--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,8 @@
 
 
 
-    <color name="tv_hint">#bcbcbc</color>
+    <color name="tv_hint">#7c7c7c</color>
+
     <color name="tv_name">#444444</color>
     <color name="tv_brand">#000044</color>
     <color name="tv_price">#FE2E31</color>
@@ -21,7 +22,7 @@
     <color name="boder">#ffe3e3e3</color>
     <color name="bg_light">#fffcfcfc</color>
 
-
+    <color name="red">#ff3030</color>
 
     <!--背景颜色-->
     <color name="colorBackground">#eeeeee</color>
