--- a/app/src/main/res/layout/activity_brand.xml
+++ b/app/src/main/res/layout/activity_brand.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.autolayout.AutoLinearLayout
+<com.zhy.autolayout.AutoRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,15 +8,24 @@
 
     <include layout="@layout/activity_brand_header"/>
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_brand"
+    <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
 
-    <com.xinyuan.xyshop.widget.WaveSideBarView
-        android:id="@+id/side_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_brand"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10px"
+            android:layout_marginTop="30px"
+            android:layout_marginRight="90px"
+            />
 
-</com.zhy.autolayout.AutoLinearLayout>
+        <com.xinyuan.xyshop.widget.WaveSideBarView
+            android:id="@+id/side_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"/>
+    </com.zhy.autolayout.AutoRelativeLayout>
+</com.zhy.autolayout.AutoRelativeLayout>
