--- a/app/src/main/res/layout/fragment_good_service.xml
+++ b/app/src/main/res/layout/fragment_good_service.xml
@@ -7,5 +7,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:src="@drawable/test_service"/>
 </LinearLayout>
