--- a/app/src/main/res/layout/fragment_shopcar.xml
+++ b/app/src/main/res/layout/fragment_shopcar.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">\
+                android:orientation="vertical">
 
+    <include layout="@layout/fragment_category"/>
 
     <TextView
         android:layout_width="wrap_content"
