--- a/app/src/main/res/layout/fragment_good_info.xml
+++ b/app/src/main/res/layout/fragment_good_info.xml
@@ -34,8 +34,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="925px"
                             app:indicator_drawable_selected="@drawable/banner_shape"
-                            app:indicator_height="32px"
-                            app:indicator_width="32px"/>
+                            app:indicator_height="24px"
+                            app:indicator_width="24px"
+                            app:indicator_margin="20px"/>
 
                         <ImageView
                             android:id="@+id/goodinfo_share"
