change SearchActivityMVP change some style

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -33,7 +33,7 @@
             app:alignContent="flex_start"
             app:alignItems="center"
             app:defaultDrawable="@drawable/bg_flow"
-            app:defaultTextColor="@drawable/text_bg"
+            app:defaultTextColor="@drawable/tv_click"
             app:dividerDrawable="@drawable/bg_flow_divider"
             app:flexDirection="row"
             app:flexWrap="wrap"
@@ -56,8 +56,8 @@
             android:layout_marginTop="20px"
             app:alignContent="flex_start"
             app:alignItems="center"
-            app:defaultDrawable="@drawable/bg_flow_unselect"
-            app:defaultTextColor="@color/colorPrimary"
+            app:defaultDrawable="@drawable/bg_flow"
+            app:defaultTextColor="@drawable/tv_click"
             app:dividerDrawable="@drawable/bg_flow_divider"
             app:flexDirection="row"
             app:flexWrap="wrap"
