--- a/app/src/main/res/drawable/bg_flow.xml
+++ b/app/src/main/res/drawable/bg_flow.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/bg_flow_selected" android:state_pressed="true"/>
+    <item android:drawable="@drawable/bg_flow_selected" android:state_checked="true"/>
+    <item android:drawable="@drawable/bg_flow_selected" android:state_selected="true"/>
     <item android:drawable="@drawable/bg_flow_unselect" android:state_pressed="false"/>
+    <item android:drawable="@drawable/bg_flow_selected" android:state_selected="false"/>
 </selector>
