--- a/app/src/main/res/layout/activity_good_details.xml
+++ b/app/src/main/res/layout/activity_good_details.xml
@@ -46,7 +46,7 @@
                     android:layout_height="95px"
                     android:layout_gravity="center"
                     android:textColor="@color/tv_name"
-                    android:textSize="52px"
+                    android:textSize="15sp"
                     app:pstsDividerColor="@android:color/transparent"
                     app:pstsDividerPaddingTopBottom="0dp"
                     app:pstsIndicatorColor="@color/colorPrimary"
