--- a/app/src/main/res/layout/activity_search_good_select.xml
+++ b/app/src/main/res/layout/activity_search_good_select.xml
@@ -20,6 +20,7 @@
         android:layout_marginTop="30px">
 
         <Button
+            android:id="@+id/btn_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10px"
@@ -31,6 +32,7 @@
             android:textSize="@dimen/tv_Regular"/>
 
         <Button
+            android:id="@+id/btn_ok"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10px"
